--- a/dma-project/Debug/makefile
+++ b/dma-project/Debug/makefile
@@ -63,8 +63,8 @@ all: main-build
 main-build: dma-project.elf secondary-outputs
 
 # Tool invocations
-dma-project.elf: $(OBJS) $(USER_OBJS) E:\My\ Workspace\C-sbme04t01-embedded-workspace\dma-project\STM32F401CCFX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "dma-project.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\My Workspace\C-sbme04t01-embedded-workspace\dma-project\STM32F401CCFX_FLASH.ld" --specs=nosys.specs -Wl,-Map="dma-project.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+dma-project.elf: $(OBJS) $(USER_OBJS) E:\active-gits\DMA-software-driver\dma-project\STM32F401CCFX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "dma-project.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\active-gits\DMA-software-driver\dma-project\STM32F401CCFX_FLASH.ld" --specs=nosys.specs -Wl,-Map="dma-project.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
